C版にADC,DAC制御コマンドを追加

--- a/microcomputer/C_C++/SMUcontrol/.vscode/settings.json
+++ b/microcomputer/C_C++/SMUcontrol/.vscode/settings.json
@@ -39,6 +39,7 @@
     "files.associations": {
         "uart.h": "c",
         "stdio.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "datetime.h": "c"
     }
 }
