--- a/microcomputer/C_C++/SMUcontrol/CMakeLists.txt
+++ b/microcomputer/C_C++/SMUcontrol/CMakeLists.txt
@@ -47,7 +47,7 @@ pico_enable_stdio_usb(SMUcontrol 0)
 # Add the standard library to the build
 target_link_libraries(SMUcontrol
         pico_stdlib
-        hardware_rtc)
+        )
 
 # Add the standard include files to the build
 target_include_directories(SMUcontrol PRIVATE
@@ -56,8 +56,10 @@ target_include_directories(SMUcontrol PRIVATE
 
 # Add any user requested libraries
 target_link_libraries(SMUcontrol 
+        hardware_rtc
         hardware_spi
         hardware_timer
+        hardware_adc
         )
 
 pico_add_extra_outputs(SMUcontrol)
