--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 Circuit/Main/RootProject_SMU-backups/
+Circuit/Main_ForExplain/RootProject_SMU-backups/
 Circuit/Sim/potentio_stat-backups/
 Circuit/Sim2/Sim2-backups/
 Circuit/sim3/sim-backups/
 Circuit/PrintedCircuit/Control/Control-backups/
 Circuit/PrintedCircuit/PowerSupply/PowerSupply-backups/
 Circuit/PrintedCircuit/SMU/SMU-backups/
+Circuit/PrintedCircuit/SMU2/SMU-backups/
