回路を更新2

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ Circuit/PrintedCircuit/Control/Control-backups/
 Circuit/PrintedCircuit/PowerSupply/PowerSupply-backups/
 Circuit/PrintedCircuit/SMU/SMU-backups/
 Circuit/PrintedCircuit/SMU2/SMU-backups/
+Circuit/PrintedCircuit2/Control/Control-backups/
+Circuit/PrintedCircuit2/PowerSupply/PowerSupply-backups/
+Circuit/PrintedCircuit2/SMU/SMU-backups/
+Circuit/PrintedCircuit2/SMU2/SMU-backups/
