チャンネルを減らし、基板層数を削減

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Circuit/PrintedCircuit2/Control/Control-backups/
 Circuit/PrintedCircuit2/PowerSupply/PowerSupply-backups/
 Circuit/PrintedCircuit2/SMU/SMU-backups/
 Circuit/PrintedCircuit2/SMU2/SMU-backups/
+Circuit/PrintedCircuit2/SMU3/SMU-backups/
