--- a/microcomputer/C_C++/SMUcontrol_pico2/CMakeLists.txt
+++ b/microcomputer/C_C++/SMUcontrol_pico2/CMakeLists.txt
@@ -28,34 +28,27 @@ set(PICO_BOARD pico2 CACHE STRING "Board type")
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(SMUcontrol C CXX ASM)
+project(SMUcontrol_pico2 C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(SMUcontrol SMUcontrol.c )
+add_executable(SMUcontrol_pico2 SMUcontrol_pico2.c )
 
-pico_set_program_name(SMUcontrol "SMUcontrol")
-pico_set_program_version(SMUcontrol "0.1")
+pico_set_program_name(SMUcontrol_pico2 "SMUcontrol_pico2")
+pico_set_program_version(SMUcontrol_pico2 "0.1")
 
 # Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(SMUcontrol 0)
-pico_enable_stdio_usb(SMUcontrol 1)
+pico_enable_stdio_uart(SMUcontrol_pico2 0)
+pico_enable_stdio_usb(SMUcontrol_pico2 1)
 
 # Add the standard library to the build
-target_link_libraries(SMUcontrol
-        pico_stdlib
-        )
+target_link_libraries(SMUcontrol_pico2
+        pico_stdlib)
 
-# Add the standard include files to the build
-target_include_directories(SMUcontrol PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}
-)
-
-# Add any user requested libraries
-target_link_libraries(SMUcontrol 
+target_link_libraries(SMUcontrol_pico2 
         hardware_spi
         hardware_timer
         hardware_adc
@@ -63,4 +56,10 @@ target_link_libraries(SMUcontrol
         hardware_pll
         )
 
-pico_add_extra_outputs(SMUcontrol)
+# Add the standard include files to the build
+target_include_directories(SMUcontrol_pico2 PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
+)
+
+pico_add_extra_outputs(SMUcontrol_pico2)
+
