--- a/microcomputer/C_C++/SMUcontrol/.vscode/settings.json
+++ b/microcomputer/C_C++/SMUcontrol/.vscode/settings.json
@@ -40,6 +40,7 @@
         "uart.h": "c",
         "stdio.h": "c",
         "stdlib.h": "c",
-        "datetime.h": "c"
+        "datetime.h": "c",
+        "pll.h": "c"
     }
 }
